[workspace]
resolver = "3"
members = [
    "ui/zintl",
    "ui/zintl-desktop",
    "platform/wnd",
    "platform/runtil",
    "graphics/gpu/ulexite",
    "graphics/gpu/ulexite-winit",
    "nexus/nxc",
]

[workspace.package]
license = "Apache-2.0"
description = "A graphic design toolkit for making creative artwork and professional designs."
authors = ["Hasegawa, Raku <raku@exhibition.jp>"]
version = "0.0.1-alpha.2"

[workspace.dependencies]
windows = "0.58.0"
raw-window-handle = "0.6"
